--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             Bir Sorun Yaşadım
         </button>
 
-        <a href="https://instagram.com/ecemizsurucukursu" class="btn btn-instagram" target="_blank">
+        <a href="https://instagram.com/eskisehir_ecemiz_surucu_kursu" class="btn btn-instagram" target="_blank">
             <i class="fa-brands fa-instagram" style="margin-right: 10px;"></i>
             Instagram'da Takip Et
         </a>
