--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
     <div class="container" id="main-menu">
         <div class="logo">
-            <img src="https://cdn-icons-png.flaticon.com/512/3097/3097180.png" alt="Ecemiz Sürücü Kursu">
+            <img src="./logo.png" alt="Ecemiz Sürücü Kursu">
         </div>
 
         <h1>Deneyiminiz Nasıldı?</h1>
