Buton sıralaması güncellendi, website ve WhatsApp butonları eklendi, logo düzeltildi

--- a/index.html
+++ b/index.html
@@ -36,34 +36,23 @@
 
         <a href="https://search.google.com/local/writereview?placeid=ChIJ1YWfOAgWzBQRp3Y2VIhftMo" class="btn btn-google" target="_blank" rel="noopener noreferrer">
             <i class="fa-solid fa-star" style="margin-right: 10px;"></i>
-            Harikaydı (5 Yıldız)
+            Yorum Yap
         </a>
-
-        <button class="btn btn-feedback">
-            <i class="fa-solid fa-comment-dots" style="margin-right: 10px;"></i>
-            Bir Sorun Yaşadım
-        </button>
 
         <a href="https://instagram.com/eskisehir_ecemiz_surucu_kursu" class="btn btn-instagram" target="_blank" rel="noopener noreferrer">
             <i class="fa-brands fa-instagram" style="margin-right: 10px;"></i>
-            Instagram'da Takip Et
+            Instagram Hesabımız
         </a>
-    </div>
 
-    <div class="container hidden" id="feedback-section">
-        <button id="back-btn" style="background:none; border:none; color:#94a3b8; cursor:pointer; margin-bottom:1rem; display: flex; align-items: center; font-family: inherit;">
-            <i class="fa-solid fa-arrow-left" style="margin-right: 5px;"></i> Geri Dön
-        </button>
-        
-        <h1>Bize Yazın</h1>
-        <p>Yaşadığınız sorunu direkt bize iletin, hemen çözelim.</p>
+        <a href="https://ecemizsurucukursu.com" class="btn btn-website" target="_blank" rel="noopener noreferrer">
+            <i class="fa-solid fa-globe" style="margin-right: 10px;"></i>
+            Web Sitemizi Ziyaret Et
+        </a>
 
-        <textarea id="issueText" placeholder="Mesajınız..."></textarea>
-
-        <button id="send-whatsapp" class="btn" style="background-color: #25D366; color: white;">
+        <a href="https://wa.me/905072332585" class="btn btn-whatsapp" target="_blank" rel="noopener noreferrer">
             <i class="fa-brands fa-whatsapp" style="margin-right: 10px;"></i>
-            WhatsApp İle Gönder
-        </button>
+            WhatsApp Hattı
+        </a>
     </div>
 
     <script src="js/script.js"></script>
